# vanity-address-generator

./: README.md
eth-vanity/: CLAUDE.md  Cargo.toml  README.md  run-and-terminate.sh
eth-vanity/docs/: SAFE_VANITY_DESIGN.md
eth-vanity/kernels/: vanity.cl
eth-vanity/src/: config.rs  lib.rs  main.rs
eth-vanity/src/crypto/: address.rs  keypair.rs  mod.rs
eth-vanity/src/matcher/: mod.rs  pattern.rs
eth-vanity/src/worker/: cpu.rs  gpu.rs  mod.rs  pool.rs
safe-vanity/: .gitignore  Cargo.toml  README.md
safe-vanity/executor/: README.md  deploy.js  run.js  safe-vanity.config.json  verify.js
safe-vanity/executor/lib/: deploy.js  safe-config.js
safe-vanity/miner/: Cargo.toml
safe-vanity/miner/src/: main.rs
safe-vanity/miner/src/crypto/: create2.rs  mod.rs
safe-vanity/miner/src/matcher/: mod.rs  pattern.rs
safe-vanity/miner/src/worker/: cpu.rs  mod.rs  pool.rs
safe-vanity/src/: config.rs  lib.rs
safe-vanity/verify-with-safe-sdk/: README.md  deploy.js  fetch-config.js  package.json  run.js  verify.js
safe-vanity/verify-with-safe-sdk/lib/: safe-config.js
