[package]
name = "eth_vanity"
version = "0.1.0"
edition = "2021"
description = "High-performance Ethereum vanity address generator"
license = "MIT"

[dependencies]
# Cryptography
secp256k1 = { version = "0.29", features = ["rand-std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Utilities
hex = "0.4"
thiserror = "1.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
